[package]
name = "rinex"
version = "0.22.0"
license = "MPL-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "RINEX file parsing, analysis and production"
homepage = "https://github.com/nav-solutions"
repository = "https://github.com/nav-solutions/rinex"
keywords = ["geo", "gnss", "gps", "galileo"]
categories = ["science", "science::geo", "parsing"]
edition = "2024"
readme = "README.md"
exclude = [
    "data/*",
]

[package.metadata]
msrv = "1.85"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docrs", "--generate-link-to-definition"]

[features]
# serde by default
# gzip files are supported by default
default = ["flate2", "serde"]

# unlock objects serialization
serde = [
    "dep:serde",
    "gnss-rs/serde",
    "hifitime/serde",
    "bitflags/serde",
    "ublox/serde",
]

# OBSERVATION RINEX Iterators & methods. Unlocks signal combinations.
obs = []

# NAVIGATION RINEX (decoded radio messages) Iterators & methods.
# Unlocks navigation calculations including Kepler solver and Ut1Provider.
nav = [
    "anise",
    "nalgebra",
]

# Provides the special UT1-TAI methods
ut1 = [
    "hifitime/ut1",
]

# METEO RINEX dedicated Iterators & methods.
meteo = []

# CLOCK (Special RINEX) dedicated Iterators & methods.
clock = []

# ANTEX for accurate antenna characteristics: dedicated Iterators & methods.
antex = []

# RINEX2BIN serializer
binex = [
    "dep:binex"
]

# RINEX2RTCM serializer
rtcm = [
    "dep:rtcm-rs",
]

# RINEX to GNSS binary protos serializer
protos = [
    "dep:gnss-protos",
]

# RINEX to UBX serializer and other UBX helpers
ublox = [
    "dep:ublox",
    "dep:gnss-protos",
]

# Unlock Quality Check and TEQC like methods & traits.
qc = [
    "dep:maud",
    "dep:gnss-qc-traits", 
] 

# Unlocks the Filter designer, pre and post processing algorithms.
processing = [
    "qc",
    "gnss-qc-traits/processing",
]

# Unlock all features, at once
full = [
    "antex",
    "clock",
    "flate2",
    "meteo",
    "nav",
    "obs",
    "processing",
    "serde",
    "binex",
    "rtcm",
    "ut1",
    "ublox",
    "serde",
]

[build-dependencies]
serde_json = { version = "1", features = ["preserve_order"] }
serde = { version = "1", default-features = false, features = ["derive"] }

[dependencies.gnss-rs]
git = "https://github.com/nav-solutions/gnss"
rev = "9b9c18f60cf60045c4b702a411377469f9962e62"
features = ["std", "domes", "cospar", "sbas"]

[dependencies.gnss-qc-traits]
git = "https://github.com/nav-solutions/qc-traits"
rev = "146b737342c2d4efe377ef4804fc0f5ab9b15d97"
optional = true
features = ["html"]

[dependencies.binex]
git = "https://github.com/nav-solutions/binex"
rev = "95302377cd801e50c9073544eb99d2760b3bb679"
option = true

[dependencies.gnss-protos]
version = "0.0.2"
optional = true
features = ["gps"]

[dependencies.ublox]
version = "0.10"
optional = true
features = ["std", "sfrbx-gps"]

[dependencies.hifitime]
version = "4.2"
features = ["std"]

[dependencies.anise]
version = "0.9"
optional = true

[dependencies]
thiserror = "2"
bitflags = "2"
lazy_static = "1"
itertools = "0.14"
flate2 = { version = "1", optional = true }
maud = { version = "0.26", optional = true }
rtcm-rs = { version = "0.11", optional = true }
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }

nalgebra = { version = "0.34", optional = true }

# Log is optional and our "debug" feature: use this if you're a dev.
# Turn this on to obtain debug traces during parsing, formatting and calculations
# Use DEBUG sensitivy for all traces.
# Use normal sensitivy for error / warning traces.
log = { version = "0.4", optional = true }

# TODO see if we can get rid of those
num = "0.4"
num-derive = "0.4"
num-traits = "0.2.15"
num-integer = "0.1.44"

[dev-dependencies]
flate2 = "1"
serde_json = "1"
criterion = "0.8"
env_logger = "0.11"
rand = { version = "0.10", features = ["thread_rng"] }

[[bench]]
name = "parsing"
harness = false

[[bench]]
name = "formatting"
harness = false

[[bench]]
name = "hatanaka"
harness = false
